--- a/src/main/webapp/guest/registracijaKorisnika.xhtml
+++ b/src/main/webapp/guest/registracijaKorisnika.xhtml
@@ -24,11 +24,11 @@
             <!--        <p:graphicImage library="images" name="home.png" title="Dobrodošli na ONLINE EVENTS stranice!"-->
             <!--                        style="text-align : center;"/>-->
 <!--            <p:growl id="growl" showDetail="true" />-->
-            <h:panelGrid style="text-align: center;">
-                <p:messages id="messages" showDetail="true" closable="true">
+
+                <p:messages id="messages" showDetail="true" closable="true" styleClass="section-title">
                     <p:autoUpdate/>
                 </p:messages>
-            </h:panelGrid>
+
 
             <h:panelGrid id="panelGridInputForm" columns="2" cellpadding="5" style="margin : 0 auto" >
 
