--- a/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
@@ -83,7 +83,26 @@
             </p:messages>
         </h:panelGrid>
 
-        <div class="card">
+        <div class="card"  >
+
+            <p:toolbar>
+                <p:toolbarGroup>
+                    <p:commandButton value="New" icon="pi pi-plus" actionListener="#{crudView.openNew}"
+                                     update="panel_grid_unos" oncomplete="PF('manageEventDialog').show()"
+                                     styleClass="ui-button-success" style="margin-right: .5rem">
+                        <p:resetInput target="panel_grid_unos"/>
+                    </p:commandButton>
+
+                </p:toolbarGroup>
+                <p:toolbarGroup align="right">
+                    <p:fileUpload mode="simple" skinSimple="true" label="Import" chooseIcon="pi pi-download"/>
+                    <p:commandButton value="Export" icon="pi pi-upload" styleClass="ui-button-help" ajax="false">
+                        <p:dataExporter type="pdf" target="dt-products" fileName="products"/>
+                    </p:commandButton>
+                </p:toolbarGroup>
+            </p:toolbar>
+
+
             <p:dataTable id="dogadaji_table"
                          widgetVar="dogadajiTable"
                          var="dogadajDto"
@@ -172,6 +191,86 @@
                 </p:column>
             </p:dataTable>
         </div>
+
+        <p:dialog header="Detalji događaja" showEffect="fade" modal="true"
+                  widgetVar="manageEventDialog" responsive="true">
+                <h:panelGrid id="panel_grid_unos" columns="2">
+                    <p:outputLabel for="sifraDogadajaInput" value="Šifra događaja:   "/>
+                    <p:inputText id="sifraDogadajaInput"
+                                 value="#{dogadajiController.dogadajDto.sifraDogadaja}"
+                                 readonly="true" disabled="true"/>
+
+                    <p:outputLabel for="tipDogadaja" value="Tip događaja:   "/>
+                    <p:selectOneMenu id="tipDogadaja"
+                                     value="#{dogadajiController.dogadajDto.tipDogadaja}">
+                        <f:selectItems value="#{dogadajiController.tipDogadajaSelectItems}"/>
+                    </p:selectOneMenu>
+
+                    <p:outputLabel for="nazivDogadaja" value="Naziv događaja   :   "/>
+                    <p:inputTextarea id="nazivDogadaja"
+                                     value="#{dogadajiController.dogadajDto.nazivDogadaja}" rows="3"
+                                     cols="40"
+                                     maxlength="250" autoResize="false" required="false"
+                                     requiredMessage="Naziv događaja je obavezan podatak!"/>
+
+                    <p:outputLabel for="grad" value="Grad:   "/>
+                    <p:selectOneMenu id="grad"
+                                     value="#{dogadajiController.dogadajDto.gradDogadajaDto.sifraGrada}"
+                                     filter="true"
+                                     filterMatchMode="startsWith" style="width:250px" required="false"
+                                     requiredMessage="Grad je obavezan podatak!">
+                        <f:selectItems value="#{dogadajiController.gradSelectItems}"/>
+                    </p:selectOneMenu>
+
+                    <p:outputLabel for="vrijemeOd" value="Vrijeme od   :"/>
+                    <p:calendar id="vrijemeOd"
+                                value="#{dogadajiController.dogadajDto.vrijemeOd}" locale="de"
+                                pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+
+                    <p:outputLabel for="vrijemeDo" value="Vrijeme do   :"/>
+                    <p:calendar id="vrijemeDo"
+                                value="#{dogadajiController.dogadajDto.vrijemeDo}" locale="de"
+                                pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+
+                    <h:outputText value="Slobodan ulaz: "/>
+                    <p:selectBooleanButton id="value1"
+                                           value="#{dogadajiController.dogadajDto.slobodanUlazBoolen}"
+                                           onLabel="Da"
+                                           offLabel="Ne"
+                                           onIcon="pi pi-check" offIcon="pi pi-times"
+                                           style="width:60px"/>
+                    <p:outputLabel for="kretorDogadaja" value="Kreator događaja:   "/>
+                    <p:inputText id="kretorDogadaja"
+                                 value="#{dogadajiController.dogadajDto.kreatorDogadaja.korisnickoIme}"
+                                 readonly="true" disabled="true"/>
+                    <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
+                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
+
+
+                                     icon="pi pi-replay"/>
+                    <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
+                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
+
+
+                                     icon="pi pi-save"/>
+
+                    <!--                                         update="panelGridInputForm, filterAdvanced, messages" -->
+
+                </h:panelGrid>
+
+
+            <f:facet name="footer">
+                <p:commandButton value="Save" icon="pi pi-check" actionListener="#{crudView.saveProduct}"
+                                 update="panel_grid_unos" process="panel_grid_unos @this"/>
+                <p:commandButton value="Cancel" icon="pi pi-times" onclick="PF('manageEventDialog').hide()"
+                                 class="ui-button-secondary"/>
+            </f:facet>
+        </p:dialog>
+
 
 
         <p:dialog global="true" id="test" widgetVar="includedDialog" header="Moji podaci" showEffect="explode">
