--- a/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
@@ -87,7 +87,7 @@
 
             <p:toolbar>
                 <p:toolbarGroup>
-                    <p:commandButton value="New" icon="pi pi-plus" actionListener="#{crudView.openNew}"
+                    <p:commandButton value="Novi događaj" icon="pi pi-plus" actionListener="#{crudView.openNew}"
                                      update="panel_grid_unos" oncomplete="PF('manageEventDialog').show()"
                                      styleClass="ui-button-success" style="margin-right: .5rem">
                         <p:resetInput target="panel_grid_unos"/>
@@ -95,7 +95,6 @@
 
                 </p:toolbarGroup>
                 <p:toolbarGroup align="right">
-                    <p:fileUpload mode="simple" skinSimple="true" label="Import" chooseIcon="pi pi-download"/>
                     <p:commandButton value="Export" icon="pi pi-upload" styleClass="ui-button-help" ajax="false">
                         <p:dataExporter type="pdf" target="dt-products" fileName="products"/>
                     </p:commandButton>
@@ -247,26 +246,27 @@
                     <p:inputText id="kretorDogadaja"
                                  value="#{dogadajiController.dogadajDto.kreatorDogadaja.korisnickoIme}"
                                  readonly="true" disabled="true"/>
-                    <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
-                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
+
+<!--                    <f:facet name="footer">-->
+<!--                    <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"-->
+<!--                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"-->
 
 
-                                     icon="pi pi-replay"/>
-                    <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
-                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-
-
-                                     icon="pi pi-save"/>
-
+<!--                                     icon="pi pi-replay"/>-->
+<!--                    <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"-->
+<!--                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"-->
+<!--                                     update="panel_grid_unos" process="panel_grid_unos @this"-->
+<!--                                     icon="pi pi-save"/>-->
+<!--                    </f:facet>-->
                     <!--                                         update="panelGridInputForm, filterAdvanced, messages" -->
 
                 </h:panelGrid>
 
 
             <f:facet name="footer">
-                <p:commandButton value="Save" icon="pi pi-check" actionListener="#{crudView.saveProduct}"
+                <p:commandButton value="Spremi" icon="pi pi-replay" actionListener="#{dogadajiController.save}"
                                  update="panel_grid_unos" process="panel_grid_unos @this"/>
-                <p:commandButton value="Cancel" icon="pi pi-times" onclick="PF('manageEventDialog').hide()"
+                <p:commandButton value="Cancel" icon="pi pi-save" onclick="PF('manageEventDialog').hide()"
                                  class="ui-button-secondary"/>
             </f:facet>
         </p:dialog>
