--- a/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
@@ -87,7 +87,7 @@
 
             <p:toolbar>
                 <p:toolbarGroup>
-                    <p:commandButton value="Novi događaj" icon="pi pi-plus" actionListener="#{crudView.openNew}"
+                    <p:commandButton value="Novi događaj" icon="pi pi-plus" actionListener="#{dogadajiController.otvoriNovi}"
                                      update="panel_grid_unos" oncomplete="PF('manageEventDialog').show()"
                                      styleClass="ui-button-success" style="margin-right: .5rem">
                         <p:resetInput target="panel_grid_unos"/>
@@ -96,7 +96,7 @@
                 </p:toolbarGroup>
                 <p:toolbarGroup align="right">
                     <p:commandButton value="Export" icon="pi pi-upload" styleClass="ui-button-help" ajax="false">
-                        <p:dataExporter type="pdf" target="dt-products" fileName="products"/>
+                        <p:dataExporter type="pdf" target="dogadaji_table" fileName="events"/>
                     </p:commandButton>
                 </p:toolbarGroup>
             </p:toolbar>
@@ -266,7 +266,7 @@
             <f:facet name="footer">
                 <p:commandButton value="Spremi" icon="pi pi-replay" actionListener="#{dogadajiController.save}"
                                  update="panel_grid_unos" process="panel_grid_unos @this"/>
-                <p:commandButton value="Cancel" icon="pi pi-save" onclick="PF('manageEventDialog').hide()"
+                <p:commandButton value="Odustani" icon="pi pi-save" onclick="PF('manageEventDialog').hide()"
                                  class="ui-button-secondary"/>
             </f:facet>
         </p:dialog>
