dialog spremanje dogadaja

--- a/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
@@ -249,17 +249,17 @@
                                  value="#{dogadajiController.dogadajDto.kreatorDogadaja.korisnickoIme}"
                                  readonly="true" disabled="true"/>
 
-                    <f:facet name="footer">
-                    <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
-                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
+<!--                    <f:facet name="footer">-->
+<!--                    <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"-->
+<!--                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"-->
 
 
-                                     icon="pi pi-replay"/>
-                    <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
-                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                     update="panel_grid_unos" process="panel_grid_unos @this"
-                                     icon="pi pi-save"/>
-                    </f:facet>
+<!--                                     icon="pi pi-replay"/>-->
+<!--                    <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"-->
+<!--                                     style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"-->
+<!--                                     update="panel_grid_unos" process="panel_grid_unos @this"-->
+<!--                                     icon="pi pi-save"/>-->
+<!--                    </f:facet>-->
                     <!--                                         update="panelGridInputForm, filterAdvanced, messages" -->
 
                 </h:panelGrid>
