--- a/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima4.xhtml
@@ -127,57 +127,41 @@
                         <span style="font-weight: bold">Pregled događaja</span>
                     </div>
                 </f:facet>
-                <p:column headerText="Šifra" filterBy="#{dogadajDto.sifraDogadaja}" filterMatchMode="contains">
+                <p:column headerText="Šifra">
                     <h:outputText value="#{dogadajDto.sifraDogadaja}"/>
                 </p:column>
-                <p:column headerText="Naziv" filterBy="#{dogadajDto.nazivDogadaja}" filterMatchMode="contains">
+                <p:column headerText="Naziv">
                     <h:outputText value="#{dogadajDto.nazivDogadaja}"/>
                 </p:column>
 
 <!--                <p:column headerText="Tip" filterBy="#{dogadajDto.tipDogadaja}" filterMatchMode="exact">-->
                 <p:column headerText="Tip" >
-
-                <f:facet name="filter">
-                        <p:selectOneMenu onchange="PF('dogadajiTable').filter()" styleClass="custom-filter">
-<!--                            <f:selectItem itemLabel="-" itemValue="#{null}" noSelectionOption="true"/>-->
-                            <f:selectItems value="#{dogadajiController.tipDogadajaFilterSelectItems}"/>
-                        </p:selectOneMenu>
-                    </f:facet>
                     <h:outputText value="#{dogadajDto.tipDogadajaNaziv}" styleClass="#{dogadajDto.tipDogadaja == 1 ? 'glazba' :  dogadajDto.tipDogadaja == 2 ? 'kultura' :
                                         dogadajDto.tipDogadaja == 3 ? 'sport' : dogadajDto.tipDogadaja == 4 ? 'posao' : 'ostalo'}"/>
                 </p:column>
 
-                <p:column headerText="Vrijeme od" filterBy="#{dogadajDto.vrijemeOd}" filterMatchMode="contains">
+                <p:column headerText="Vrijeme od" >
                     <h:outputText value="#{dogadajDto.vrijemeOd}">
                         <f:converter converterId="LocalDateConverter"/>
                     </h:outputText>
                 </p:column>
 
-                <p:column headerText="Vrijeme do" filterBy="#{dogadajDto.vrijemeDo}" filterMatchMode="contains">
+                <p:column headerText="Vrijeme do">
                     <h:outputText value="#{dogadajDto.vrijemeDo}">
                         <f:converter converterId="LocalDateConverter"/>
                     </h:outputText> </p:column>
-                <p:column headerText="Ulaz slobodan" filterBy="#{dogadajDto.slobodanUlaz}" filterMatchMode="exact">
-
-                    <f:facet name="filter">
-                        <p:selectOneMenu onchange="PF('dogadajiTable').filter()" styleClass="custom-filter">
-                            <f:selectItems value="#{dogadajiController.slobodanUlazFilterSelectItems}"/>
-                        </p:selectOneMenu>
-                    </f:facet>
+                <p:column headerText="Ulaz slobodan" >
                     <h:outputText value="#{dogadajDto.slobodanUlaz}"/>
                 </p:column>
-                <p:column headerText="Grad"
-                          filterBy="#{dogadajDto.gradDogadajaDto.nazivGrada}">
+                <p:column headerText="Grad">
                     <h:outputText value="#{dogadajDto.gradDogadajaDto.nazivGrada}"/>
                 </p:column>
 
-                <p:column headerText="Županija"
-                          filterBy="#{dogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nazivOrgJedinice}">
+                <p:column headerText="Županija">
                     <h:outputText
                             value="#{dogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nazivOrgJedinice}"/>
                 </p:column>
-                <p:column headerText="Kreator"
-                          filterBy="#{dogadajDto.kreatorDogadaja.korisnickoIme}">
+                <p:column headerText="Kreator">
                     <h:outputText
                             value="#{dogadajDto.kreatorDogadaja.korisnickoIme}"/>
                 </p:column>
