--- a/src/main/webapp/guest/registracijaKorisnika.xhtml
+++ b/src/main/webapp/guest/registracijaKorisnika.xhtml
@@ -19,15 +19,20 @@
         </div>
         <p:separator style="width:540px; text-align: center; "/>
 
+        <h:panelGrid id="message_panel_grid">
+            <p:growl id="messages" showDetail="true"/>
+
+        </h:panelGrid>
+
 
         <h:panelGroup layout="block" style="padding-top: 20px;">
             <!--        <p:graphicImage library="images" name="home.png" title="Dobrodošli na ONLINE EVENTS stranice!"-->
             <!--                        style="text-align : center;"/>-->
 <!--            <p:growl id="growl" showDetail="true" />-->
 
-                <p:messages id="messages" showDetail="true" closable="true" styleClass="section-title">
-                    <p:autoUpdate/>
-                </p:messages>
+<!--                <p:messages id="messages" showDetail="true" closable="true" styleClass="section-title">-->
+<!--                    <p:autoUpdate/>-->
+<!--                </p:messages>-->
 
 
             <h:panelGrid id="panelGridInputForm" columns="2" cellpadding="5" style="margin : 0 auto" >
