--- a/src/main/webapp/secured/user/kalendar.xhtml
+++ b/src/main/webapp/secured/user/kalendar.xhtml
@@ -17,6 +17,11 @@
 </h:head>
 
 <h:body>
+    <f:facet name="last">
+        <h:outputStylesheet name="diamond/diamond-layout/css/myevent.css" />
+    </f:facet>
+
+
     <script type="text/javascript">
         PrimeFaces.locales ['hr'] = {
             closeText: 'Zatvori',
